modified plivacy and terms for mobile

--- a/app/views/toppages/plivacy_policy.html.erb
+++ b/app/views/toppages/plivacy_policy.html.erb
@@ -1,10 +1,10 @@
 <div class='row'>
-  <div class='border m-5 terms'>
-    <div class='m-5'>
+  <div class='terms'>
+    <div class='mt-5'>
       <h1 class='border-bottom'>プライバシーポリシー</h1>
         <p>RISC!!運営チーム（以下，「運営チーム」といいます。）は，本ウェブサイト上で提供するサービス（以下,「本サービス」といいます。）における，ユーザーの個人情報の取扱いについて，以下のとおりプライバシーポリシー（以下，「本ポリシー」といいます。）を定めます。</p>
     </div>
-    <div class='m-5'>
+    <div class='mt-5'>
       <h2 class='border-bottom'>1. 収集する利用者情報及び収集方法</h2>
         <p>本ポリシーにおいて、「利用者情報」とは、ユーザーの識別に係る情報、通信サービス上の行動履歴、その他ユーザーのスマートフォン、PC等の端末においてユーザーまたはユーザーの端末に関連して生成または蓄積された情報であって、本ポリシーに基づき運営チームが収集するものを意味するものとします。 本サービスにおいて運営チームが収集する利用者情報は、その収集方法に応じて、以下のようなものとなります。</p>
       <h3 class='mt-5'>(1)ユーザーからご提供いただく情報</h3>
@@ -21,7 +21,7 @@
           <li>Cookie及び匿名ID</li>
         </ul>
     </div>
-    <div class='m-5'>
+    <div class='mt-5'>
       <h2 class='border-bottom'>2. 利用目的</h2>
         <p>2-1. 利用者情報は、2-2に定めるとおり本サービスの提供のために利用されるほか、2-3に定めるとおり、その他の目的にも利用される場合があります。</p>
         <p>2-2 本サービスのサービス提供にかかわる利用者情報の具体的な利用目的は以下のとおりです。</p>
@@ -33,7 +33,7 @@
           <li>上記の利用目的に付随する利用目的のため</li>
         </ol>
     </div>
-    <div class='m-5'>
+    <div class='mt-5'>
       <h2 class='border-bottom'>3.第三者提供</h2>
         <p>運営チームは、利用者情報のうち、個人情報については、個人情報保護法その他の法令に基づき開示が認められる場合を除くほか、あらかじめユーザーの同意を得ないで、第三者に提供しません。但し、次に掲げる場合はこの限りではありません。</p>
         <ol>
@@ -44,21 +44,20 @@
           <li>その他、個人情報保護法その他の法令で認められる場合</li>
         </ol>
     </div>
-    <div class='m-5'>
+    <div class='mt-5'>
       <h2 class='border-bottom'>4.お問い合わせ窓口</h2>
         <p>ご意見、ご質問、苦情のお申し出その他利用者情報の取扱いに関するお問い合わせは、下記窓口までお願い致します。</p>
         <p class='text-center'>risk.project2020[a].gmail.com</p>
         <p class='text-center'>※[a]を＠に変更してお願いします。</p>
     </div>
-    <div class='m-5'>
+    <div class='mt-5'>
       <h2 class='border-bottom'>5.プライバシーポリシーの変更手続</h2>
         <p>運営チームは、利用者情報の取扱いに関する運用状況を適宜見直し、継続的な改善に努めるものとし、必要に応じて、本ポリシーを変更することがあります。
         　本ポリシーの変更にあたって、運営チームが大幅な変更と判断した場合を除いて、ユーザーの皆様に通知をすることはございません。ご利用の際には随時、最新のプライバシーポリシーをご参照ください。</p>
       <div class='mt-5'>
         <p class='text-center'>以上</p>
         <p style='color: #C0C0C0'>2020年7月15日作成</p>
-        </div>
-    </div>
+      </div>
     </div>
   </div>
 </div>
