--- a/app/views/toppages/terms_of_service.html.erb
+++ b/app/views/toppages/terms_of_service.html.erb
@@ -1,17 +1,17 @@
 <div class='row'>
-  <div class='border m-5 terms'>
-    <div class='m-5'>
+  <div class='terms'>
+    <div class='mt-5'>
       <h1 class='border-bottom'>サービス利用規約</h1>
         <p>本利用規約（以下、本規約）には、本サービスの提供条件及び当サービスの運営チームと登録ユーザーの皆様との間の権利義務関係が定められています。本サービスの利用に際しては、本規約の全文をお読みいただいた上で、本規約に同意いただく必要があります。</p>
     </div>
-    <div class='m-5'>
+    <div class='mt-5'>
       <h2 class='border-bottom'>第1条（適用）</h2>
         <ol>
           <li>本規約は，ユーザーと当サービスの利用に関する運営チームとの間の本サービスの利用に関わる一切の関係に適用されるものとします。</li>
           <li>本規約の内容とその他の本規約外における本サービスの説明等とが異なる場合は、本規約の規定が優先して適用されるものとします。</li>
         </ol>
     </div>
-    <div class='m-5'>
+    <div class='mt-5'>
       <h2 class='border-bottom'>第2条（定義）</h2>
         <p>本規約において使用する以下の用語は、各々以下に定める意味を有するものとします。</p>
         <ol>
@@ -22,7 +22,7 @@
           <li>「本サービス」とは、RISC!!という名称のサービス（理由の如何を問わずサービスの名称または内容が変更された場合は、当該変更後のサービスを含みます。）を意味します。</li>
         </ol>
     </div>
-    <div class='m-5'>
+    <div class='mt-5'>
       <h2 class='border-bottom'>第3条（登録）</h2>
         <ol>
           <li>登録希望者が当サービス運営チームの定める方法によって利用登録を申請し，当サービス運営チームがこれを承認することによって，利用登録が完了するものとします。</li>
@@ -35,14 +35,14 @@
             </ol>
         </ol>
     </div>
-    <div class='m-5'>
+    <div class='mt-5'>
       <h2 class='border-bottom'>第4条（パスワード及びユーザーIDの管理）</h2>
         <ol>
           <li>登録ユーザーは、自己の責任において、本サービスに関するパスワード及びユーザーIDを適切に管理及び保管するものとし、これを第三者に利用させ、または貸与、譲渡、名義変更、売買等をしてはならないものします。</li>
           <li>パスワードまたはユーザーIDの管理不十分、使用上の過誤、第三者の使用等によって生じた損害に関する責任は登録ユーザーが負うものとし、運営チームは一切の責任を負いません。</li>
         </ol>
     </div>
-    <div class='m-5'>
+    <div class='mt-5'>
       <h2 class='border-bottom'>第5条（禁止事項）</h2>
         <p>登録ユーザーは、本サービスの利用にあたり、以下の各号のいずれかに該当する行為または該当すると運営チームが判断する行為をしてはなりません。</p>
         <ol>
@@ -62,11 +62,11 @@
           <li>その他、運営チームが不適切と判断する行為</li>
         </ol>
     </div>
-    <div class='m-5'>
+    <div class='mt-5'>
       <h2 class='border-bottom'>第6条（本サービスの停止等）</h2>
         <p>運営チームは登録ユーザーに通知することなく，本サービスの内容を変更しまたは本サービスの提供を中止することができるものとし，これによって登録ユーザーに生じた損害について一切の責任を負いません。</p>
     </div>
-    <div class='m-5'>
+    <div class='mt-5'>
       <h2 class='border-bottom'>第7条（著作権）</h2>
         <ol>
           <li>登録ユーザーは，自ら著作権等の必要な知的財産権を有するか，または必要な権利者の許諾を得た文章，画像や映像等の情報に関してのみ，本サービスを利用し，投稿ないしアップロードすることができるものとします。</li>
@@ -74,7 +74,7 @@
           <li>前項本文の定めるものを除き，本サービスおよび本サービスに関連する一切の情報についての著作権およびその他の知的財産権はすべて運営チームまたは運営チームにその利用を許諾した権利者に帰属し，登録ユーザーは無断で複製，譲渡，貸与，翻訳，改変，転載，公衆送信（送信可能化を含みます。），伝送，配布，出版，営業使用等をしてはならないものとします。</li>
         </ol>
     </div>
-    <div class='m-5'>
+    <div class='mt-5'>
       <h2 class='border-bottom'>第8条（利用制限および登録抹消）</h2>
         <ol>
           <li>運営チームは，登録ユーザーが以下のいずれかに該当する場合には，事前の通知なく，投稿データを削除し，登録ユーザーに対して本サービスの全部もしくは一部の利用を制限しまたは登録ユーザーとしての登録を抹消することができるものとします。</li>
@@ -88,7 +88,7 @@
           <li>運営チームは，本条に基づき当社が行った行為により登録ユーザーに生じた損害について，一切の責任を負いません。</li>
         </ol>
     </div>
-    <div class='m-5'>
+    <div class='mt-5'>
       <h2 class='border-bottom'>第9条（保証の否認および免責事項）</h2>
         <ol>
           <li>本サービス運営チームは，本サービスに事実上または法律上の瑕疵（安全性，信頼性，正確性，完全性，有効性，特定の目的への適合性，セキュリティなどに関する欠陥，エラーやバグ，権利侵害などを含みます。）がないことを明示的にも黙示的にも保証しておりません。</li>
@@ -97,23 +97,23 @@
           <li>当サービス運営チームは，本サービスに関して，登録ユーザーと他の登録ユーザーまたは第三者との間において生じた取引，連絡または紛争等について一切責任を負いません。</li>
         </ol>
     </div>
-    <div class='m-5'>
+    <div class='mt-5'>
       <h2 class='border-bottom'>第10（利用規約の変更）</h2>
         <p>運営チームは，必要と判断した場合には，登録ユーザーに通知することなくいつでも本規約を変更することができるものとします。なお，本規約の変更後，本サービスの利用を開始した場合には，当該ユーザーは変更後の規約に同意したものとみなします。</p>
     </div>
-    <div class='m-5'>
+    <div class='mt-5'>
       <h2 class='border-bottom'>第11条（個人情報の取扱い）</h2>
         <p>運営チームは，本サービスの利用によって取得する個人情報については，当社「プライバシーポリシー」に従い適切に取り扱うものとします。</p>
     </div>
-    <div class='m-5'>
+    <div class='mt-5'>
       <h2 class='border-bottom'>第12条（通知または連絡）</h2>
         <p>登録ユーザーと当サービス運営チームとの間の通知または連絡は，当サービス運営チームの定める方法によって行うものとします。</p>
     </div>
-    <div class='m-5'>
+    <div class='mt-5'>
       <h2 class='border-bottom'>第13条（権利義務の譲渡の禁止）</h2>
         <p>登録ユーザーは，運営チームの書面による事前の承諾なく，利用契約上の地位または本規約に基づく権利もしくは義務を第三者に譲渡し，または担保に供することはできません。</p>
     </div>
-    <div class='m-5'>
+    <div class='mt-5'>
       <h2 class='border-bottom'>第14条（準拠法・裁判管轄）</h2>
         <ol>
           <li>本規約の解釈にあたっては，日本法を準拠法とします。</li>
