--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,11 +1,22 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+//For PC's CSS'
+
 #user_map {
     width: 100%;
     height: 600px;
     margin: 0 auto;
 }
+
+#bookmarks_map {
+    width: 100%;
+    height: 600px;
+    margin: 0 auto;
+}
+
+
 
 #likes_map {
     width: 100%;
@@ -14,8 +25,29 @@
 }
 
 
+//For small display's CSS'
+@media(max-width: 768px){
+#likes_map {
+    width: 100%;
+    height: 300px;
+    margin: 0 auto;
+  } 
+
+#user_map {
+    width: 100%;
+    height: 300px;
+    margin: 0 auto;
+  } 
+
 #bookmarks_map {
     width: 100%;
-    height: 600px;
+    height: 300px;
     margin: 0 auto;
+  } 
+
+h1.user-name {
+    font-size: 24px;
+  }
 }
+
+
