--- a/app/views/maps/_replies.html.erb
+++ b/app/views/maps/_replies.html.erb
@@ -1,5 +1,5 @@
 <div class='col-sm-12'>
-  <h3 class='mt-5 mb-3'>コメント一覧</h3>
+  <h3 class='mt-5 mb-3 map-h3'>コメント一覧</h3>
     <% replies.each do |r| %>
     <div class='card mb-1 mt-1'>
       <div class='card-body'>
