--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,8 +1,8 @@
 <div class='text-center'>
   <h1>RISC!!</h1>
-  <p>Road Infomation Site for Cyclists</p>
+  <p class='toppages-p'>Road Infomation Site for Cyclists</p>
 </div>
-<h6>マーカーをクリックしてください！マーカーの中の'詳細'をクリックすると詳細ページへと飛びます！<%= link_to 'RISCとは？', about_path %></h6>
+<h6 class='toppages-h6'>マーカーをクリックしてください！マーカーの中の'詳細'をクリックすると詳細ページへと飛びます！<%= link_to 'RISCとは？', about_path %></h6>
 <!-- google map shows down -->
 <div id ='top_map' class='top_map'></div>
 
