--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class='text-center mt-3'>
-  <h1><%= @user.name %>さんの投稿一覧</h1>
+  <h1 class='user-name'><%= @user.name %>さんの投稿一覧</h1>
 </div>
 
 <% unless @user_map.empty? %>
