--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -1,9 +1,9 @@
+//For PC display
 #new_map {
     width: 100%;
     height: 400px;
     margin-bottom: 50px;
 }
-
 
 #show_map {
     width: 100%;
@@ -11,3 +11,57 @@
     margin: 0 auto;
 }
 
+//For small display
+@media(max-width: 768px){
+#show_map {
+    width: 100%;
+    height: 300px;
+    margin: 0 auto;
+  } 
+
+#new_map {
+    width: 100%;
+    height: 300px;
+    margin: 0 auto;
+  } 
+
+select.map-select {
+    font-size: 16px;
+  }
+
+h1.map-h1 {
+    font-size: 28px;
+  }
+
+h2.map-h2 {
+    font-size: 20px;
+  }
+
+h3.map-h3 {
+    font-size: 18px;
+  }
+
+h5.map-h5 {
+  font-size: 18px;
+  }
+
+h6.map-h6 {
+    font-size: 16px;
+  }
+
+p.map-p {
+    font-size: 11px;
+  }
+
+p.map-show-p {
+    font-size: 16px;
+  }
+
+li.map-list {
+    font-size: 16px;
+  }
+
+a.back-to-top {
+    font-size: 20px;
+  }
+}
