--- a/app/views/maps/_form.html.erb
+++ b/app/views/maps/_form.html.erb
@@ -8,55 +8,55 @@
   
   <%= f.fields_for :title do |t| %>
     <div class='form-group mb-5'>
-    <h5><%= t.label :title, '1.危険度合いを選択してください' %></h5>
-      <%= t.select :title, [['超危険！避けるべき！'],['危険！'],['要注意！']], {}, {class: 'form-control'} %>
+    <h5 class='map-h5'><%= t.label :title, '1.危険度合いを選択してください' %></h5>
+      <%= t.select :title, [['超危険！避けるべき！'],['危険！'],['要注意！']], {}, {class: 'form-control map-select'} %>
     </div>
   <% end %>
 
 <!-- google map here -->
   
-  <h5>2.マップをクリックするとクリックした場所にマーカーを移動させることができます。</h5>
-  <h5>危険箇所の上にマーカーを表示させてください。</h5>
+  <h5 class='map-h5'>2.マップをクリックするとクリックした場所にマーカーを移動させることができます。</h5>
+  <h5 class='map-h5'>危険箇所の上にマーカーを表示させてください。</h5>
   
   <div id='new_map' class='mt-5'>
   </div>
 
 <!-- detail checbox description -->
 
-  <h5 class='mb-5'>3.危険だと思われる理由にチェックをつけてください。</h5>
+  <h5 class='mb-5 map-h5'>3.危険だと思われる理由にチェックをつけてください。</h5>
 
 <!-- Traffic checkbox form -->
 
   <div class='row'>
     <div class='col-md-4 list-group mb-5'>
-      <h6 class='text-center'>交通量関係</h6>
+      <h6 class='text-center map-h6'>交通量関係</h6>
       <%= f.fields_for :traffic do |t| %>
-        <li class='list-group-item'><%= t.check_box :volume %> <%= t.label :volume, '交通量が多い' %></li>
-        <li class='list-group-item'><%= t.check_box :speed %> <%= t.label :speed, '車の速度が速い' %></li>
-        <li class='list-group-item'><%= t.check_box :large_car %> <%= t.label :large_car, '大型車の通行量が多い' %></li>
-        <li class='list-group-item'><%= t.check_box :people %> <%= t.label :people, '歩行者が大量' %></li>
-        <li class='list-group-item'><%= t.check_box :stop %> <%= t.label :stop, '自転車通行禁止・行き止まり' %></li>
+        <li class='list-group-item map-list'><%= t.check_box :volume %> <%= t.label :volume, '交通量が多い' %></li>
+        <li class='list-group-item map-list'><%= t.check_box :speed %> <%= t.label :speed, '車の速度が速い' %></li>
+        <li class='list-group-item map-list'><%= t.check_box :large_car %> <%= t.label :large_car, '大型車の通行量が多い' %></li>
+        <li class='list-group-item map-list'><%= t.check_box :people %> <%= t.label :people, '歩行者が大量' %></li>
+        <li class='list-group-item map-list'><%= t.check_box :stop %> <%= t.label :stop, '自転車通行禁止・行き止まり' %></li>
       <% end %>
     </div>
 
 <!-- Road checkbox form -->
     
     <div class='col-md-4 list-group mb-5'>
-      <h6 class='text-center'>路面状況関係</h6>  
+      <h6 class='text-center map-h6'>路面状況関係</h6>  
       <%= f.fields_for :road do |r| %>
-        <li class='list-group-item'><%= r.check_box :condition %> <%= r.label :condition, '路面が荒れている' %></li>
-        <li class='list-group-item'><%= r.check_box :sidewalk %> <%= r.label :sidewalk, '避難用の歩道がない' %></li>
-        <li class='list-group-item'><%= r.check_box :narrow %> <%= r.label :narrow, '道が狭い' %></li>
+        <li class='list-group-item map-list'><%= r.check_box :condition %> <%= r.label :condition, '路面が荒れている' %></li>
+        <li class='list-group-item map-list'><%= r.check_box :sidewalk %> <%= r.label :sidewalk, '避難用の歩道がない' %></li>
+        <li class='list-group-item map-list'><%= r.check_box :narrow %> <%= r.label :narrow, '道が狭い' %></li>
       <% end %>
     </div>
 
 <!-- Shop checkbox form -->
     
     <div class='col-md-4 list-group mb-5'>
-      <h6 class='text-center'>補給・休憩関係</h6>
+      <h6 class='text-center map-h6'>補給・休憩関係</h6>
       <%= f.fields_for :shop do |s| %>
-        <li class='list-group-item'><%= s.check_box :no_shop %> <%= s.label :no_shop, 'コンビニ等休憩場所がない' %></li>
-        <li class='list-group-item'><%= s.check_box :no_vending_machine %> <%= s.label :no_vending_machine, '近くに自動販売機がない' %></li>
+        <li class='list-group-item map-list'><%= s.check_box :no_shop %> <%= s.label :no_shop, 'コンビニ等休憩場所がない' %></li>
+        <li class='list-group-item map-list'><%= s.check_box :no_vending_machine %> <%= s.label :no_vending_machine, '近くに自動販売機がない' %></li>
       <% end %>
     </div>
   </div>
@@ -65,7 +65,7 @@
   
   <div class='row'>
     <div class='col-sm-12 mb-5'>
-      <h5>4.上記の選択項目になかった危険な箇所や、代替ルート、コメント・備考等があれば下記にお願いします。</h5>
+      <h5 class='map-h5'>4.上記の選択項目になかった危険な箇所や、代替ルート、コメント・備考等があれば下記にお願いします。</h5>
       <%= f.fields_for :comment do |c| %>
         <%= c.text_area :comment, class: 'form-control', placeholder: '最大800文字' %>
       <% end %>
