--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,8 +19,8 @@
         markers = handler.addMarkers(<%=raw @hash.to_json %>);
         handler.bounds.extendWith(markers);
         handler.fitMapToBounds();
-        handler.getMap().setZoom(22;
-    });
+        handler.getMap().setZoom(2)
+        });
   </script>
 <% else %>
   <div class='text-center mt-5 mb-5'>
