--- a/app/views/toppages/news.html.erb
+++ b/app/views/toppages/news.html.erb
@@ -1,11 +1,22 @@
-<div class='text-center mt-5'>
-  <div class='card mb-1 mt-1'>
-    <div class='card-hedder'>
-      <h4 class='toppages-h4'>2020-07-15 VERSION 0.10 (BETA版)リリース</h4>
+<div class='mt-5'>
+  <div class='mb-1 mt-1'>
+    <h4 class='toppages-h4 border-bottom'>2020-07-23 VERSION 0.20 (BETA版)リリース</h4>
+    <div>
+      <p class='toppages-p'>β版としてVERSION 0.20にアップグレードしました。</p>
+      <p class='toppages-p'>旧版(0.10)からの変更点は以下の通りとなります。</p>
+        <ul>
+          <li>アドレスを独自ドメインに変更</li>
+          <li>SSL化に対応</li>
+          <li>マップ上のマーカー情報デザインの変更</li>
+        </ul>
+      <p class='toppages-p'>不具合等発生した場合は運営宛にメールをお願い致します。</p>
     </div>
-    <div class='card-body'>
-      <p class='toppages-p'>ベータ版として0.10をリリース致しました！</p>
-      <p class='toppages-p''>不具合等発生した場合は運営宛にメールをお願い致します。</p>
+  </div>
+  <div class='mb-1 mt-5'>
+    <h4 class='toppages-h4 border-bottom'>2020-07-15 VERSION 0.10 (BETA版)リリース</h4>
+    <div>
+      <p class='toppages-p'>β版として0.10をリリース致しました！</p>
+      <p class='toppages-p'>不具合等発生した場合は運営宛にメールをお願い致します。</p>
     </div>
   </div>
 </div>
