--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,6 +1,7 @@
 <div class='text-center'>
   <h1>RISC!!</h1>
   <p class='toppages-p'>Road Infomation Site for Cyclists</p>
+  <h4 class='current-count'>現在の総投稿数：<%= Map.count %></h4>
 </div>
 <h6 class='toppages-h6'>マーカーをクリックしてください！マーカーの中の'詳細'をクリックすると詳細ページへと飛びます！<%= link_to 'RISCとは？', about_path %></h6>
 <!-- google map shows down -->
