--- a/app/views/toppages/news.html.erb
+++ b/app/views/toppages/news.html.erb
@@ -1,5 +1,17 @@
 <div class='mt-5'>
-  <div class='mb-1 mt-1'>
+  <div class='mb-1 mb-5'>
+    <h4 class='toppages-h4 border-bottom'>2020-07-28 VERSION 0.21 (BETA版)リリース</h4>
+    <div>
+      <p class='toppages-p'>β版としてVERSION 0.21にマイナーアップグレードしました。</p>
+      <p class='toppages-p'>旧版(0.20)からの変更点は以下の通りとなります。</p>
+        <ul>
+          <li>新規投稿時の確認メッセージを変更</li>
+          <li>投稿削除時の確認メッセージを追加</li>
+        </ul>
+      <p class='toppages-p'>不具合等発生した場合は運営宛にメールをお願い致します。</p>
+    </div>
+  </div>
+  <div class='mb-1 mb-5'>
     <h4 class='toppages-h4 border-bottom'>2020-07-23 VERSION 0.20 (BETA版)リリース</h4>
     <div>
       <p class='toppages-p'>β版としてVERSION 0.20にアップグレードしました。</p>
@@ -12,7 +24,7 @@
       <p class='toppages-p'>不具合等発生した場合は運営宛にメールをお願い致します。</p>
     </div>
   </div>
-  <div class='mb-1 mt-5'>
+  <div class='mb-1'>
     <h4 class='toppages-h4 border-bottom'>2020-07-15 VERSION 0.10 (BETA版)リリース</h4>
     <div>
       <p class='toppages-p'>β版として0.10をリリース致しました！</p>
