--- a/app/views/toppages/news.html.erb
+++ b/app/views/toppages/news.html.erb
@@ -1,5 +1,16 @@
 <div class='mt-5'>
   <div class='mb-1 mb-5'>
+    <h4 class='toppages-h4 border-bottom'>2020-09-16 VERSION 0.3 (BETA版)リリース</h4>
+    <div>
+      <p class='toppages-p'>β版としてVERSION 0.3にマイナーアップグレードしました。</p>
+      <p class='toppages-p'>旧版(0.21)からの変更点は以下の通りとなります。</p>
+        <ul>
+          <li>体験としてゲストログイン機能を実装</li>
+        </ul>
+      <p class='toppages-p'>不具合等発生した場合は運営宛にメールをお願い致します。</p>
+    </div>
+  </div>
+  <div class='mb-1 mb-5'>
     <h4 class='toppages-h4 border-bottom'>2020-07-28 VERSION 0.21 (BETA版)リリース</h4>
     <div>
       <p class='toppages-p'>β版としてVERSION 0.21にマイナーアップグレードしました。</p>
