--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -2,10 +2,14 @@
   <div class='col-sm-6 offset-sm-3'>
     <%- if controller_name != 'sessions' %>
       <p>すでにアカウントを持っている場合は <%= link_to "ログインする", new_session_path(resource_name) %></p>
+      <p>もしくは<p>
+      <%= link_to 'ゲストログイン', users_guest_sign_in_path, method: :post, class: 'btn btn-block btn-outline-warning '%>
     <% end %>
 
     <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
       <p>アカウントをまだお持ちでない方は <%= link_to "会員登録", new_registration_path(resource_name) %></p>
+      <p>もしくは<p>
+      <%= link_to 'ゲストログイン', users_guest_sign_in_path, method: :post, class: 'btn btn-block btn-outline-warning '%>
     <% end %>
 
     <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
